# stablesolver

./: .gitignore  CMakeLists.txt  README.md
csharp/StableSolver/: Example.cs  StableSolver.csproj  StableSolverInterface.cs
include/stablesolver/c_api/: c_api.h
src/: CMakeLists.txt
src/c_api/: CMakeLists.txt  c_api.cpp
